[workspace]
resolver = "2"
members = ["shared", "mgmtd", "sqlite", "sqlite_check", "bee_serde_derive"]

[workspace.package]
edition = "2024"
authors = ["ThinkParQ GmbH"]
homepage = "https://www.beegfs.io"
documentation = "https://doc.beegfs.io"
publish = false

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0"
itertools = "0"
libc = "0"
log = { version = "0", features = ["std"] }
prost = "0.14"
protobuf = { git = "https://github.com/thinkparq/protobuf", rev = "22c0e932f71f4cbfbd91244916d7d011f6954b46" }
regex = "1"
ring = "0"
rusqlite = { version = "0", features = ["bundled", "vtab", "array", "fallible_uint"] }
serde = "1"
thiserror = "~2"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
tokio-stream = { version = "0" }
tonic = { version = "0.14", features = ["tls-ring"] }
uuid = { version = "1", features = ["v4"] }
