[package]
name = "bee_serde_derive"
description = "Derive macro for bee_serde"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "~2", features = ["parsing"] }
quote = "~1"
proc-macro2 = "~1"
