[package]
name = "config"
version = "0.1.0"
edition = "2021"
authors = ["ThinkParQ GmbH"]
description = "A library for handling dynamic app configuration"
homepage = "https://www.beegfs.io"
publish = false

[dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
