[package]
name = "ctl"
version = "0.1.0"
edition = "2021"
authors = ["ThinkParQ GmbH"]
description = "BeeGFS ctl Rust prototype"
readme = "README.md"
homepage = "https://www.beegfs.io"
publish = false

[dependencies]
shared = { path = "../shared" }

async-trait = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
