[package]
name = "mgmtd"
description = "The BeeGFS management service"
readme = "README.md"
version = "0.0.0"
license-file = "LICENSE.md"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
publish.workspace = true

[[bin]]
name = "beegfs-mgmtd"
path = "src/main.rs"

[build-dependencies]
sqlite = { path = "../sqlite" }

[dependencies]
shared = { path = "../shared", features = ["grpc"]}
protobuf = { workspace = true }
sqlite = { path = "../sqlite" }
sqlite_check = { path = "../sqlite_check"}

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
libloading = { version = "0.8" }
log = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
sd-notify = "0"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "net",
    "rt-multi-thread",
    "fs",
    "signal",
    "time",
    "io-util",
] }
tokio-stream = { workspace = true }
tokio-rusqlite = { workspace = true }
toml = "0"
tonic = { workspace = true }
uuid = { workspace = true }

[lints.clippy]
undocumented_unsafe_blocks = "deny"

# RPM package generation

[package.metadata.generate-rpm]
name = "beegfs-mgmtd"
assets = [
    # We use the binary generated and postprocessed from the Makefile
    { source = "../target/make/beegfs-mgmtd", dest = "/opt/beegfs/sbin/", mode = "755" },
    { source = "../target/make/thirdparty-licenses.html", dest = "/usr/share/doc/beegfs/", mode = "644" },
    { source = "assets/beegfs-mgmtd.toml", dest = "/etc/beegfs/", mode = "644" },
    { source = "assets/beegfs-mgmtd.service", dest = "/etc/systemd/system/", mode = "644" },
]

[package.metadata.generate-rpm.variants.debuginfo]
name = "beegfs-mgmtd-debuginfo"
extended-description = "The BeeGFS management daemon debug info"
assets = [
    { source = "../target/make/beegfs-mgmtd.debug", dest = "/opt/beegfs/sbin/", mode = "755" },
]

[package.metadata.generate-rpm.variants.debuginfo.requires]
beegfs-mgmtd = "*"

# DEB package generation

[package.metadata.deb]
name = "beegfs-mgmtd"
extended-description = "The BeeGFS management daemon"
assets = [
    # We use the binary generated and postprocessed from the Makefile
    [
        "../target/make/beegfs-mgmtd",
        "/opt/beegfs/sbin/",
        "755",
    ],
    [
        "../target/make/thirdparty-licenses.html",
        "/usr/share/doc/beegfs/",
        "644",
    ],
    [
        "assets/beegfs-mgmtd.toml",
        "/etc/beegfs/",
        "644",
    ],
    [
        "assets/beegfs-mgmtd.service",
        "/etc/systemd/system/",
        "644",
    ],
]

[package.metadata.deb.variants.debuginfo]
name = "beegfs-mgmtd-debuginfo"
extended-description = "The BeeGFS management daemon debug info"
depends = "beegfs-mgmtd"
assets = [
    [
        "../target/make/beegfs-mgmtd.debug",
        "/opt/beegfs/sbin/",
        "755",
    ]
]
