[package]
name = "mgmtd"
description = "The BeeGFS management service"
readme = "README.md"
version = "0.0.0"
license-file = "LICENSE.md"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
publish.workspace = true

[[bin]]
name = "beegfs-mgmtd"
path = "src/main.rs"

[build-dependencies]
sqlite = { path = "../sqlite" }

[dependencies]
shared = { path = "../shared", features = ["grpc"] }
protobuf = { workspace = true }
sqlite = { path = "../sqlite" }
sqlite_check = { path = "../sqlite_check" }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
daemonize = "0"
env_logger = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
libloading = { version = "0.8" }
log = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
sd-notify = "0"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "net",
    "rt-multi-thread",
    "fs",
    "signal",
    "time",
    "io-util",
] }
tokio-stream = { workspace = true }
toml = "0"
tonic = { workspace = true }
uuid = { workspace = true }

[lints.clippy]
undocumented_unsafe_blocks = "deny"

# RPM package generation

[package.metadata.generate-rpm]
name = "beegfs-mgmtd"
extended-description = "The BeeGFS management service"
# We do not specify any dependencies for now as we might be linked against an older glibc than the
# hosts and auto detect would put it as a requirement into the package. This allows the package to
# be installed even if the systems glibc is too old, however, this is acceptable until we find a
# better solution
auto-req = "disabled"
assets = [
    # We use the binary generated and postprocessed from the Makefile
    { source = "target/release/beegfs-mgmtd", dest = "/opt/beegfs/sbin/", mode = "755" },
    { source = "target/release/thirdparty-licenses.html", dest = "/usr/share/doc/beegfs/", mode = "644" },
    { source = "assets/beegfs-mgmtd.toml", dest = "/etc/beegfs/", mode = "644", config = true },
    { source = "assets/beegfs-mgmtd.service", dest = "/usr/lib/systemd/system/", mode = "644" },
]

[package.metadata.generate-rpm.suggests]
libbeegfs-license = ">= 8"

[package.metadata.generate-rpm.variants.debug]
name = "beegfs-mgmtd-debuginfo"
extended-description = "The BeeGFS management service debug info"
assets = [
    { source = "target/release/beegfs-mgmtd.debug", dest = "/opt/beegfs/sbin/", mode = "644" },
]

[package.metadata.generate-rpm.variants.debug.requires]
beegfs-mgmtd = "*"

# DEB package generation

[package.metadata.deb]
name = "beegfs-mgmtd"
extended-description = "The BeeGFS management service"
# We do not specify any dependencies for now as we might be linked against an older glibc than the
# hosts and auto detect would put it as a requirement into the package. This allows the package to
# be installed even if the systems glibc is too old, however, this is acceptable until we find a
# better solution
depends = ""
suggests = "libbeegfs-license (>= 8)"
assets = [
    # We use the binary generated and postprocessed from the Makefile
    [
        "target/release/beegfs-mgmtd",
        "/opt/beegfs/sbin/",
        "755",
    ],
    [
        "target/release/thirdparty-licenses.html",
        "/usr/share/doc/beegfs/",
        "644",
    ],
    [
        "assets/beegfs-mgmtd.toml",
        "/etc/beegfs/",
        "644",
    ],
    [
        "assets/beegfs-mgmtd.service",
        "/usr/lib/systemd/system/",
        "644",
    ],
]
conf-files = ["/etc/beegfs/beegfs-mgmtd.toml"]

[package.metadata.deb.variants.debug]
name = "beegfs-mgmtd-dbg"
extended-description = "The BeeGFS management service debug info"
depends = "beegfs-mgmtd"
assets = [["target/release/beegfs-mgmtd.debug", "/opt/beegfs/sbin/", "644"]]
