[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors = ["ThinkParQ GmbH"]
description = "Provides shared code that can be reused by BeeGFS Rust projects"
homepage = "https://www.beegfs.io"
publish = false

[dependencies]
bee_serde_derive = { path = "bee_serde_derive" }
hsieh = { path = "hsieh" }

anyhow = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
pnet_datalink = "~0"
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "net",
    "io-util",
    "time",
    "rt-multi-thread",
] }
