[package]
name = "shared"
description = "Provides shared code that can be reused by BeeGFS Rust projects"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
bee_serde_derive = { path = "../bee_serde_derive" }
hsieh = { path = "hsieh" }

anyhow = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
pnet_datalink = "~0"
protobuf = { workspace = true, optional = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "net",
    "io-util",
    "time",
    "rt-multi-thread",
] }
tokio-stream = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }

[features]
grpc = ["dep:protobuf", "dep:tonic", "dep:tokio-stream"]

[lints.clippy]
undocumented_unsafe_blocks = "deny"
