[package]
name = "shared"
description = "Contains shared BeeGFS functionality"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
bee_serde_derive = { path = "../bee_serde_derive" }

aes-gcm = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
pnet_datalink = "0"
protobuf = { workspace = true, optional = true }
regex = { workspace = true }
# This is currently used to generate sha256 hashes, but only because tonic->rustls already depends
# on it. Since this is annoying to have with its weird license, if tonic doesn't need this anymore
# at some point, we should think about removing it.
ring = { workspace = true}
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "net",
    "io-util",
    "time",
    "rt-multi-thread",
] }
tokio-stream = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }

[features]
grpc = ["dep:protobuf", "dep:tonic", "dep:tokio-stream"]

[lints.clippy]
undocumented_unsafe_blocks = "deny"
