[package]
name = "sqlite"
description = "SQLite tools"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
rusqlite = { workspace = true, features = ["backup"] }
tokio = { workspace = true }

