[package]
name = "sqlite_check"
description = "A simple SQLite query checker for BeeGFS management code"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
sqlite = {path = "../sqlite" }

syn = { version = "2", features = ["parsing"] }
rusqlite = { workspace = true }
